Se arreglo HorariosFunciones, se implemento el login y se puso un poquito de colores

--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Equipos.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Equipos.cshtml
@@ -122,7 +122,7 @@
                             </h2>
 
                             <h4 align="left">
-                                Desea borrar la entidad?
+                                Desea borrar este equipo?
                             </h4>
                             <h6 align="left">
                                 @Model.Actual!.Tipo
