--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Peliculas.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Peliculas.cshtml
@@ -94,7 +94,7 @@
                         
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                IdClasificacion
+                                Clasificacion
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmIdClasificacion"
@@ -123,7 +123,7 @@
                             </h2>
 
                             <h4 align="left">
-                                Desea borrar la entidad?
+                                Desea borrar esta pelicula?
                             </h4>
                             <h6 align="left">
                                 @Model.Actual!.Titulo
@@ -167,7 +167,7 @@
                                 Duracion
                             </th>
                             <th class="cl_hidden">
-                                IdClasificacion
+                                Clasificacion
                             </th>
                             <th class="cl_actions">
                                 Accion
