--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Salas.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Salas.cshtml
@@ -93,7 +93,7 @@
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                IdSucursal
+                                Sucursal
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmIdSucursal"
@@ -122,7 +122,7 @@
                             </h2>
 
                             <h4 align="left">
-                                Desea borrar la entidad?
+                                Desea borrar esta sala?
                             </h4>
                             <h6 align="left">
                                 @Model.Actual!.NumeroSala
@@ -161,7 +161,7 @@
                                 Estado
                             </th>
                             <th class="cl_hidden">
-                                IdSucursal
+                                Sucursal
                             </th>
                             <th class="cl_actions">
                                 Accion
