--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Boletos.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Boletos.cshtml
@@ -122,7 +122,7 @@
                             </h2>
 
                             <h4 align="left">
-                                Desea borrar la entidad?
+                                Desea borrar el boleto?
                             </h4>
                             <h6 align="left">
                                 @Model.Actual!.Asiento
