--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Empleados.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Empleados.cshtml
@@ -85,7 +85,7 @@
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                FechaContratacion
+                                Fecha de contratacion
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmFechaContratacion"
@@ -134,7 +134,7 @@
                             </h2>
 
                             <h4 align="left">
-                                Desea borrar la entidad?
+                                Desea borrar este empleado?
                             </h4>
                             <h6 align="left">
                                 @Model.Actual!.Nombre
