--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/HorariosEmpleados.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/HorariosEmpleados.cshtml
@@ -110,7 +110,7 @@
                             </h2>
 
                             <h4 align="left">
-                                Desea borrar la entidad?
+                                Desea borrar este horario?
                             </h4>
                             <h6 align="left">
                                 @Model.Actual!.Fecha
