--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/HorariosFunciones.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/HorariosFunciones.cshtml
@@ -122,7 +122,7 @@
                             </h2>
 
                             <h4 align="left">
-                                Desea borrar la entidad?
+                                Desea borrar el horario?
                             </h4>
                             <h6 align="left">
                                 @Model.Actual!.Fecha
