--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Proveedores.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Proveedores.cshtml
@@ -81,7 +81,7 @@
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Id del Producto
+                                Producto
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmIdProducto"
@@ -110,7 +110,7 @@
                             </h2>
 
                             <h4 align="left">
-                                Desea borrar la entidad?
+                                Desea borrar el proveedor?
                             </h4>
                             <h6 align="left">
                                 @Model.Actual!.Nombre
@@ -151,7 +151,7 @@
                                 Nombre
                             </th>
                             <th class="cl_hidden">
-                                IdProducto
+                                Producto
                             </th>
                             <th class="cl_actions">
                                 Accion
