--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Productos.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Productos.cshtml
@@ -89,6 +89,17 @@
                                        asp-for="@Model.Actual!.Precio" />
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="col-lg-4 control-label">
+                                Imagen
+                            </label>
+                            <div class="col-lg-6">
+                                <input type="file"
+                                       asp-for="FormFile"
+                                       class="form-control"
+                                       accept="image/*" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             }
@@ -153,6 +164,9 @@
                             <th class="cl_hidden">
                                 Precio
                             </th>
+                            <th>
+                                Imagen
+                            </th>
                             <th class="cl_actions">
                                 Accion
                             </th>
@@ -170,6 +184,17 @@
                                     </td> 
                                     <td class="cl_hidden">
                                         @elemento.Precio
+                                    </td>
+                                    <td>
+                                        @if (elemento.Imagen != null)
+                                        {
+                                            <img src="data:image/png;base64,@(Convert.ToBase64String(elemento.Imagen))"
+                                                 style="width:80px; height:80px; object-fit:cover;" />
+                                        }
+                                        else
+                                        {
+                                            <span>Sin Imagen</span>
+                                        }
                                     </td>
                                     <td>
                                         <input type="submit"
