--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Boletos.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Boletos.cshtml
@@ -50,9 +50,9 @@
                 <input type="hidden"
                        asp-for="@Model.Actual!.Precio" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.IdCliente" />
+                       asp-for="@Model.Actual!._IdCliente!.Nombre" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.IdSala" />
+                       asp-for="@Model.Actual!._IdSala!.NumeroSala" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
@@ -88,7 +88,7 @@
                             <div class="col-lg-6">
                                 <input id="nmCliente"
                                        class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.IdCliente" />
+                                       asp-for="@Model.Actual!._IdCliente!.Nombre" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -98,7 +98,7 @@
                             <div class="col-lg-6">
                                 <input id="nmSala"
                                        class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.IdSala" />
+                                       asp-for="@Model.Actual!._IdSala!.NumeroSala" />
                             </div>
                         </div>
                     </div>
@@ -179,10 +179,10 @@
                                         @elemento.Precio
                                     </td> 
                                     <td>
-                                        @elemento.IdCliente
+                                        @elemento._IdCliente!.Nombre
                                     </td> 
                                     <td class="cl_hidden">
-                                         @elemento.IdSala
+                                         @elemento._IdSala!.NumeroSala
                                     </td>
                                     <td>
                                         <input type="submit"
