--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Peliculas.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Peliculas.cshtml
@@ -187,8 +187,11 @@
                                     <td class="cl_hidden">
                                         @elemento.Duracion
                                     </td>
+                                    @* <td class="cl_hidden">
+                                        @elemento._IdClasificacion!.Categoria
+                                    </td> *@
                                     <td class="cl_hidden">
-                                        @elemento.IdClasificacion
+                                        @(elemento._IdClasificacion?.Categoria ?? "Sin clasificación")
                                     </td>
 
                                     <td>
