--- a/Proyecto_cine/asp_presentacion/Pages/Index.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Index.cshtml
@@ -13,6 +13,9 @@
 
                 <h3 class="text-center mb-4">Inicio de sesión</h3>
 
+                <p class="text-danger text-center h5 mb-3">
+                    <strong>AVISO: SI ERES CLIENTE, NO REQUIERES LOGUEARTE</strong>
+                </p>
                 <form method="POST" class="card p-4 shadow">
 
                     <div class="form-group mb-3">
@@ -34,13 +37,13 @@
                         <input type="submit"
                                value="Limpiar"
                                asp-page-handler="BtClean"
-                               class="btn btn-primary" 
+                               class="btn btn-primary"
                                style="background-color: #161E7D; border-color: #161E7D;" />
 
                         <input type="submit"
                                value="Entrar"
                                asp-page-handler="BtEnter"
-                               class="btn btn-primary" 
+                               class="btn btn-primary"
                                style="background-color: #3E49AD; border-color: #3E49AD;" />
                     </div>
 
@@ -55,7 +58,6 @@ else
     <div class="container mt-5">
         <div class="row align-items-center">
 
-            <!-- Texto del proyecto -->
             <div class="col-md-6 text-center text-md-start">
                 <h1 class="display-4 fw-bold">Proyecto Cine</h1>
                 <p class="text-muted" style="font-size: 1.1rem;">
@@ -69,18 +71,17 @@ else
                     <input type="submit"
                            value="Cerrar"
                            asp-page-handler="BtClose"
-                           class="btn btn-dark mt-3" 
+                           class="btn btn-dark mt-3"
                            style="background-color: #161E7D; border-color: #161E7D;" />
                 </form>
             </div>
 
-           @*  <!-- Imagen grande a la derecha -->
             <div class="col-md-6 text-center">
                 <img src="imagen.cine.sinfondo.png"
                      alt="Imagen Proyecto Cine"
                      class="img-fluid"
-                     style="max-height: 280px; object-fit: contain;" />
-            </div> *@
+                     style="max-height: 450px; object-fit: cover;" />
+            </div>
         </div>
     </div>
 }
