--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Clientes.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Clientes.cshtml
@@ -187,7 +187,7 @@
                                         @elemento.Edad
                                     </td> 
                                     <td class="cl_hidden">
-                                        @elemento.IdMembresia
+                                        @(elemento._IdMembresia?.Nombre ?? "Sin membresia")
                                     </td>
                                     <td>
                                         <input type="submit"
