--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Equipos.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Equipos.cshtml
@@ -187,7 +187,7 @@
                                         @elemento.Estado
                                     </td> 
                                     <td class="cl_hidden">
-                                        @elemento.IdSucursal
+                                        @(elemento._IdSucursal?.Nombre?? "Sin sucursal")
                                     </td>
                                     <td>
                                         <input type="submit"
