--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Tecnicos.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Tecnicos.cshtml
@@ -187,7 +187,7 @@
                                         @elemento.Especialidad
                                     </td> 
                                     <td class="cl_hidden">
-                                        @elemento.IdEquipo
+                                        @(elemento._IdEquipo?.Marca?? "Sin equipo")
                                     </td>
                                     <td>
                                         <input type="submit"
