--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Salas.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Salas.cshtml
@@ -182,7 +182,7 @@
                                         @elemento.Estado
                                     </td> 
                                     <td class="cl_hidden">
-                                         @elemento.IdSucursal
+                                         @(elemento._IdSucursal?.Nombre?? "Sin sucursal")
                                     </td>
                                     <td>
                                         <input type="submit"
