--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Empleados.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Empleados.cshtml
@@ -205,7 +205,7 @@
                                         @(elemento._IdSucursal?.Nombre ?? "Sin sucursal")
                                     </td>
                                     <td class="cl_hidden">
-                                        @(elemento._IdHorarioEmpleado?.HoraInicio.ToString())
+                                        @(elemento._IdHorarioEmpleado?.IdHorariosEmpleados)
                                     </td>
                                     <td>
                                         <input type="submit"
