--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Salas.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Salas.cshtml
@@ -86,9 +86,12 @@
                                 Estado
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmEstado"
-                                       class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.Estado" />
+                                <select id="nmEstado"
+                                        class="cts_forms form-control"
+                                        asp-for="@Model.Actual!.Estado"
+                                        asp-items="Model.Estados">
+                                </select>
+
                             </div>
                         </div>
                         <div class="form-group">
